// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > it works with defaults 1`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 1`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 2`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-serif_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with families 3`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-mono_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 1`] = `
<div
  class="_this_b26e6e _size-small_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 2`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with sizes 3`] = `
<div
  class="_this_b26e6e _size-large_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 1`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-regular_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 2`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-medium_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with weights 3`] = `
<div
  class="_this_b26e6e _size-medium_b26e6e _family-sans_b26e6e _weight-bold_b26e6e"
  data-testid="Text"
>
  Hello world
</div>
`;
